--- a/index3.html
+++ b/index3.html
@@ -39,35 +39,26 @@
 <body class="demo-3 loading">
     <main>
         <div class="message">Some message for mobile (if needed).</div>
-        <div class="frame">
-            <h1 class="frame__title">3D Folded Layout</h1>
-            <div class="frame__links">
-                <a href="http://tympanus.net/Tutorials/TextureProjection/">Previous Demo</a>
-                <a href="https://tympanus.net/codrops/?p=46441">Article</a>
-                <a href="https://github.com/Anemolo/FoldingDOM">GitHub</a>
-            </div>
-            <div class="frame__demos">
-                <a href="index.html" class="frame__demo">demo 1</a>
-                <a href="index2.html" class="frame__demo">demo 2</a><a href="index3.html" class="frame__demo frame__demo--current">demo 3</a><a href="index4.html" class="frame__demo">demo 4</a>
-                <a href="index5.html" class="frame__demo">demo 5</a>
+        <div class="frame"></div>
             </div>
         </div>
         <div class="content">
             <div class="fold-content" id="base-content">
                 <!-- CONTENT INSIDE HERE -->
+                <h1 class="content__titulo">El Poder del Cine</h1>
                 <p class="content__type">
-                    <span class="content__type-special">Admit it.</span> You aren’t like them. You’re not even close. You may occasionally dress yourself up as one of them, watch the same mindless television shows as they do, maybe even eat the same fast food sometimes.
+                    <span class="content__type-special">Desde las imagenes</span>
                 </p>
-                <img class="content__img" src="img/15.jpg" alt="Some image" />
+                <img class="content__img" src="http://giffetteria.it/archivio/shining15.gif" alt="the shinning" />
                 <p class="content__type">
-                    But it seems that the more you try to fit in, the more you feel like an outsider, watching the “normal people” as they go about their automatic existences. For every time you say club passwords like “Have a nice day” and “Weather’s awful today, eh?”, you yearn inside to say forbidden things like “Tell me something that makes you cry” or “What do you think deja vu is for?”. Face it, you even want to talk to that girl in the elevator.
+                    Hasta el sonido
                 </p>
-                <img class="content__img" src="img/16.jpg" alt="Some image" />
+                <img class="content__img" src="http://3.bp.blogspot.com/-5dIaOeQZnPk/ThpMF4_b2GI/AAAAAAAABt8/VQ1JrqPACNY/s1600/Cantando+bajo+la+lluvia-poster.jpg" alt="cantando bajo la lluvia" />
                 <p class="content__type">
-                    But what if that girl in the elevator (and the balding man who walks past your cubicle at work) are thinking the same thing? Who knows what you might learn from taking a chance on conversation with a stranger? Everyone carries a piece of the puzzle. Nobody comes into your life by mere coincidence. Trust your instincts. Do the unexpected. Find the others…
+                   El cine ha tenido el poder de desconectarnos del mundo real, y sumergirnos en un mundo de posibilidades. Uno puede encontrarse con un mundo de acción o un mundo de aventura, un mundo de romance o un mundo de terror, entre muchos otros géneros. el punto es que no importa la situación en la que me encuentre, personalmente el cine ha logrado distraerme del mundo aunque sea por un rato, y a mi parecer ese es un enorme poder.
                 </p>
-                <img class="content__img" src="img/17.jpg" alt="Some image" />
-                <p class="content__type">Timothy Francis Leary <br />(October 22, 1920 – May 31, 1996)</p>
+                <img class="content__img" src="https://media1.tenor.com/images/abfca2f056f0abfb4193f7b4ce5a1d8f/tenor.gif?itemid=7199846" alt="Some image" />
+                <p class="content__type">Sofía Vargas<br />(3 de Mayo 2021)</p>
             </div>
             <div class="screen" id="fold-wrapper"></div>
             <button class="btn-debug" id="btn-debug">See Planes</button>
